<resources>
    <string name="app_name">Pitjarus App</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="app_version">App Ver 1.0.0 – 20013FEA6BCC820C</string>
    <string name="check_update">Check update</string>
    <string name="keep_username">Keep username</string>
    <string name="no_update_available">No update available</string>
    <string name="loading">Loading</string>
    <string name="close">Close</string>
    <string name="an_error_occured">An error occurred.</string>
    <string name="field_is_required">This field is required</string>
    <string name="main_menu">Main Menu</string>
    <string name="mitha_khairulnisa">Mitha Khairulnisa</string>
    <string name="role">Role: {...}</string>
    <string name="nik_md000001">NIK: MD000001</string>
    <string name="_150">150</string>
    <string name="_50">50%</string>
    <string name="visit_on_month_">Kunjungan pada bulan %s</string>
    <string name="menu">Menu</string>
    <string name="transmission_history">Transmission History</string>
    <string name="dashboard">Dashboard</string>
    <string name="site_visit">Kunjungan</string>
    <string name="logout">Logout</string>
    <string name="list_kunjungan_s">List kunjungan %s</string>
    <string name="find_store_distributor">Cari Toko/Distributor</string>
    <string name="list_store">List Store</string>
    <string name="store_name_placeholder">Store name placeholder</string>
    <string name="unknown">Unknown</string>
    <string name="address_placeholder">Alamat toko</string>
    <string name="tipe_outlet">Tipe Outlet</string>
    <string name="yes">Ya</string>
    <string name="e_merchandising">E-Merchandising</string>
    <string name="pareto">Pareto</string>
    <string name="ertm">ERTM</string>
    <string name="sub_tipe_display">Sub Tipe Display</string>
    <string name="tipe_display">Tipe Display</string>
    <string name="last_visit">Last visit</string>
    <string name="none">None</string>
    <string name="no_visit">No Visit</string>
    <string name="visit">Visit</string>
    <string name="set_store_pict_first">Set foto toko terlebih dahulu</string>
    <string name="tag_store_location_first">Tag lokasi toko terlebih dahulu</string>
    <string name="store_verification">Verifikasi Store</string>
    <string name="target_install_cdfpdc">Target Install CDFPDC</string>
    <string name="save">Simpan</string>
    <string name="cancel">Batalkan</string>
    <string name="distance_in_meter">%S m</string>
    <string name="choose">Pilih</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="choose_a_picture">Pilih gambar</string>
    <string name="please_wait">Please wait</string>
    <string name="failed_to_take_a_picture">Gagal mengambil gambar</string>
    <string name="success_taking_picture">Berhasil mengambil gambar</string>
    <string name="failed_to_start_camera">Gagal membuka kamera</string>
    <string name="store_location_is_not_set">Lokasi toko belum ditambahkan</string>
    <string name="store_distance_is_too_far">Jarak toko terlalu jauh</string>
    <string name="activate_location_feature_to_get_last_location">Aktifkan lokasi untuk mendapatkan lokasi terakhir</string>
    <string name="cluster_small">Cluster: Small</string>
    <string name="information">Information</string>
    <string name="product_check">Product Check</string>
    <string name="sku_promo">SKU Promo</string>
    <string name="ringkasan_oss">Ringkasan OSS</string>
    <string name="store_investment">Store Investment</string>
    <string name="dashboard_store">Dashboard Store</string>
    <string name="osa">OSA</string>
    <string name="september_2020">September 2020</string>
    <string name="target">Target</string>
    <string name="pencapaian">Pencapaian</string>
    <string name="_40">40</string>
    <string name="npd">NPD</string>
    <string name="_80">80%</string>
    <string name="undefined">Undefined</string>
</resources>